# flash-attention-cuda

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: bench_attention.py  render_report_artifacts.py
docs/: benchmarks.md  design.md  math.md
flash_attention_cuda/: __init__.py  attention.py  reference.py
report/: README.md  latexmkrc  main.tex  references.bib
report/sections/: 00_frontmatter.tex  01_introduction.tex  02_background.tex  03_online_softmax.tex  04_flash_attention.tex  05_cuda_design.tex  06_implementation.tex  07_backward.tex  08_correctness.tex  09_methodology.tex  10_results.tex  11_discussion.tex  12_limitations.tex  13_conclusion.tex  appendix_derivations.tex  appendix_reproducibility.tex  appendix_result_schema.tex
results/: benchmark_baseline.csv
src/: __init__.py  attention_cuda.cpp  attention_kernel.cu  attention_naive.py
tests/: conftest.py  test_benchmarks.py  test_correctness.py  test_cuda.py  test_public_api.py  test_reference.py  tests_cuda_import.py
